update domain name

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ links:
   - name:         GitHub
     url:          http://github.com/dodoinblue
     external:     true
-highlighter:      pygments
+highlighter:      rouge
 permalink:        pretty
 markdown:         kramdown
 kramdown:
