--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ links:
     external:     true
 highlighter:      rouge
 permalink:        pretty
-markdown:         kramdown
+markdown:         kramdown # redcarpet is no longer supported.
 kramdown:
-  extensions:     [smart]
+  input: GFM
+  hard_wrap: false
