Add css style for tables

--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,12 @@ signoff:          Charles
 #google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 
 links:
-#  - name:         About
-#    url:          /about
+  # - name:         About
+  #   url:          /about
   - name:         Blog
     url:          /index.html
+  - name:         En
+    url:          /en
   - name:         Email
     url:          mailto:dodoinblue@gmail.com
     external:     true
