feat: add .wellknown for dev

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ signoff:          Charles
 #disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
 #facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 #google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
-
+include:
+  - .wellknown/assetlinks.json
 links:
   # - name:         About
   #   url:          /about
