fix: include .wellknown in the build

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ signoff:          Charles
 #facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 #google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 include:
-  - .wellknown/assetlinks.json
+  - .well-known
 links:
   # - name:         About
   #   url:          /about
